--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=GerenciarTarefas
+spring.datasource.url=jdbc:mysql://localhost:3306/gerenciadortarefas
+spring.datasource.username=root
+spring.datasource.password=93280659
+
+server.port=8080
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+server.error.include-message=always
